Countries and service section implemented

--- a/style/style.css
+++ b/style/style.css
@@ -11,9 +11,19 @@ body{
 .btn{
     background-color: #872BFF;
     border-radius: 20px;
-    padding: 5px 15px;
+    padding: 18px 25px;
     border: none;
+    cursor: pointer;
     color: #fff;
+    transition: all .3s;
+}
+.btn:hover{
+    background-color: #ff2bed50;
+    color: #fff;
+}
+
+.btn-container{
+    text-align: center;
 }
 .img{
     width: 100%;
@@ -22,10 +32,10 @@ body{
     padding: 60px 0px;
 }
 .banner-box{
-    width: 80%;
+    width: 87.5%;
     margin: 0 auto;
     padding: 20px 30px;
-    background-image: linear-gradient(#ffffffdc, #ffffffa2), url(./../images/hero-bg.png);
+    background-image: linear-gradient(rgb(255,255,255, 0.9),#ffffff80), url(./../images/hero-bg.png);
     background-color: white;
     border-radius: 30px;
     display: flex;
@@ -41,4 +51,85 @@ body{
 }
 .banner-img{
     width: 600px;
+}
+.services{
+    padding: 60px 0;
+}
+.service-box{
+    width: 87.5%;
+    margin: 0 auto;
+}
+.service-heading{
+    margin-bottom: 30px;
+    text-align: center;
+}
+.service-heading p{
+    color: #F411CF;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.service-heading h2{
+     font-size: 32px;
+}
+.service-card-container{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+.service-card{
+    background-color: antiquewhite;
+    border-radius: 10px;
+    padding: 30px;
+    text-align: center;
+    max-width: 300px;
+}
+.service-card .service-icon{
+    width: 50px;
+    background-color: #ddd;
+    padding: 10px;
+    border-radius: 100px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+.service-card h2{
+    margin-bottom: 40px;
+}
+.service-card p{
+    margin-bottom: 30px;
+    color: #a8a8a8;
+    line-height: 30px;
+}
+
+.service-card-1{
+    background: linear-gradient(180deg,#c3f7fe, #ffffe4);
+}
+.service-card-2{
+    background: linear-gradient(180deg,#c3fec4, #ffffe4);
+}
+.service-card-3{
+    background: linear-gradient(180deg,#fec3ca, #ffffe4);
+}
+.coutries{
+    padding: 60px;
+}
+.countries-box{
+    width: 87.5%;
+    margin: 0 auto;
+}
+.country-card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 25px;
+    margin-bottom: 30px;
+}
+.country-card{
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    transition: all 1s;
+}
+.country-card:hover{
+    background-color: #872bff10;
+    color: #fff;
 }
