--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,10 @@
     padding: 0;
     font-family: "Plus Jakarta Sans", serif;
 }
+.container{
+    width: 87.5%;
+    margin: 0 auto;
+}
 body{
     background-image: linear-gradient(60deg, #ffff,#7921ed );
 }
@@ -24,6 +28,10 @@ body{
 
 .btn-container{
     text-align: center;
+}
+.btn-center{
+    display: block;
+    margin: 0 auto;
 }
 .img{
     width: 100%;
@@ -132,4 +140,68 @@ body{
 .country-card:hover{
     background-color: #872bff10;
     color: #fff;
+}
+.spot{
+    padding: 60px 0;
+}
+.spot-box{
+    width: 87.5%;
+    margin: 0 auto;
+}
+.spot-card-content{
+    margin: 30px 0;
+}
+.spot-card{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 20px;
+    margin-bottom: 30px;
+}
+.spot-card-img{
+    width: 600px;
+}
+.reviews{
+    padding: 60px 0;
+}
+.review-card{
+    background-color: #fff;
+    background-image: url(../images/star-reviews.png);
+    background-repeat: no-repeat;
+    background-position: 10px 130px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 20px;
+    margin-bottom: 30px;
+}
+.review-card * {
+    margin-bottom: 20px;
+}
+.newsletter{
+    padding: 60px 0;
+}
+
+.newsletter-card{
+    background-color: #fff;
+    padding: 100px 0;
+}
+.newsletter-card form{
+    display: flex;
+    justify-content: center;
+}
+.newsletter-card form input{
+    width: 60%;
+    padding: 10px;
+    background-color: #f5f5f5;
+    border: none;
+    font-size: 24px;
+    border-radius: 10px 0 0 10px;
+}
+
+.newsletter-card form button{
+    border-radius: 0 10px 10px 0;
+    padding: 0 20px;
+    background-color: #7921ed;
 }
